# condense_db

./: Cargo.toml  README.md  certs.md  decisions.md  protocol.md  query.md  readable_msgpack.md  regex.md  review_notes.md  schema.md  schemas.json  spec.md
examples/: self_schema.rs  simple_setup.rs
src/: crypto.rs  database.rs  decode.rs  document.rs  encode.rs  entry.rs  error.rs  ext_type.rs  index_ref.rs  integer.rs  lib.rs  macros.rs  marker.rs  permission.rs  query.rs  schema.rs  str_char.rs  timestamp.rs  value.rs
src/crypto/: decode.rs  error.rs  ext_type.rs  hash.rs  identity.rs  index.rs  integer.rs  key.rs  lock.rs  lockbox.rs  mod.rs  sodium.rs  stream.rs  timestamp.rs  utf8string.rs  value.rs
src/multi_crypto/: mod.rs
src/schema/: array.rs  binary.rs  bool.rs  float32.rs  float64.rs  hash.rs  identity.rs  integer.rs  lock.rs  mod.rs  multi.rs  object.rs  string.rs  time.rs
test-resources/: blake2b-test-vectors.json
