[package]
name = "condense_db"
version = "0.1.0"
authors = ["Scott Teal"]
readme = "README.md"
repository = "https://github.com/Cognoscan/condense_db"

[dependencies]
libc = "0.2"
constant_time_eq = "0.1.3"
blake2-rfc = "0.2.18"
libsodium-sys = "0.2.2"
byteorder = "1"
num-traits = "0.2"
crossbeam-utils = "0.6.5"
crossbeam-channel = "0.3.8"
regex = "1"
ieee754 = "0.2.6"
rocksdb = "0.12.2"

[dev-dependencies]
tempfile = "3.0.8"
rand = "0.6.5"
colored = "1.7"
hex = "0.3.2"
serde_json = "1.0"
